$Id$

Wishlist for future features
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

-> see bottom of this document


MIDIboxSEQ V4.086
~~~~~~~~~~~~~~~~~

   o MIDI Learn for Drum notes in Track Event configuration page:
     on a drum track, press & hold button GP12 to set the drum note
     depending on the configured recording port & channel (which has to be
     configured in the RECORD page)

   o Track Event configuration page: VelN/VelA not displayed if they are
     not relevant for the selected configuration.

MIDIboxSEQ V4.085
~~~~~~~~~~~~~~~~~

   o it's now possible to customize the MENU short cut page in MBSEQ_HW.V4
     with the new MENU_SHORTCUT parameter.
     See the templates under hwcfg/*/MBSEQ_HW.V4 for further informations.

   o the bookmark configuration files (MBSEQ_BM.V4) are using the same
     page names like MENU_SHORTCUT instead of numbers.
     The old number scheme will be automatically converted to the new names.

   o improved keypad (SMS-like) entry of names

   o SysEx device page allows to specify a delay between SysEx messages which is
     used when a .syx file contains multiple dumps

   o each SysEx device page has now a dedicated port/delay configuration which
     is stored/restored from the /SYSEX/<device>/DEVCFG.V4 file


MIDIboxSEQ V4.084
~~~~~~~~~~~~~~~~~

   o the STM32F4 variant of the firmware supports USB Host mode!
     See also http://midibox.org/forums/topic/18906-usb-host-support-for-mbhp-core-stm32f4/

   o If Force-to-Scale is enabled, the edit screen shows the forced keys at the lower line.
     The original value is still displayed at the upper right line.

   o Live Page: FTS (Force-To-Scale) not applied on drum tracks anymore

   o Options Page: added new option which enforces Force-To-Scale for
     BLM16x16+X Grid Edit mode

   o Euclid Generator Page: velocities are re-generated automatically whenever
     VelN or VelA value is changed

   o the optional RECORD button now toggles between RECORD and EDIT page (previously it