@@ -14,8 +14,11 @@ MIDIboxSEQ V4.086
      depending on the configured recording port & channel (which has to be
      configured in the RECORD page)
 
+   o Edit page: press&hold a GP button to record directly into the selected step
+
    o Track Event configuration page: VelN/VelA not displayed if they are
      not relevant for the selected configuration.
+
 
 MIDIboxSEQ V4.085
 ~~~~~~~~~~~~~~~~~
